--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
           <h1 class="hero__h1">DePin 20</h1>
           <h2 class="hero__h2">Invest in tokens that have real world usage and cash flows. Its time to get real.</h2>
           <p class="hero__p">DePIN 20 is a decentralized index fund represented by a single token, <strong class="bold">$DEPIN</strong>, providing accessible exposure to the top 20 Decentralized Physical Infrastructure Network (DePIN) projects. It allows investors easy and  diversified exposure to leading compute, energy, connectivity, and data collection networks.</p>
-          <p class="hero__caption">
-            The Depin portfolio construction is weighted by our conviction and rebalanced monthly to reflect our thesis and conviction
-          </p>
           <img class="hero__map" src="img/map.png" alt="Map of DePIN">
           
         </div>
@@ -168,7 +165,7 @@
                     <a class="table__link" href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp?authuser=0&hl=en" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/dawn.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/dawn.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
@@ -196,7 +193,7 @@
                     <a class="table__link" href="https://www.helium.com/" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/helium.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/helium.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
@@ -252,22 +249,52 @@
                     <a class="table__link" href="https://geodnet.com/" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/geodnet.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/geodnet.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
             </div>
 
+
+
+            <div class="table__row" id="solana">
+              <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/solana.pdf', '_blank')">
+                <img width="100" height="100" src="img/logo/solana.jpg" alt="solana" class="table__logo">
+              </div>
+              <div class="table__cell table__name-wrapper" onclick="window.open('pdf/solana.pdf', '_blank')">
+                <h3 class="table__name">Solana</h3>
+              </div>
+              <div class="table__cell table__description-wrapper" onclick="window.open('pdf/solana.pdf', '_blank')">
+                <p class="table__description">
+                  Solana is the blockchain world’s speedster—sleek, efficient, and not one to dwell on traditional decentralization debates. It’s the go-to chain for those who need transactions finalized faster than their coffee can cool. Think of it as the fast track in the bustling crypto marketplace.
+                </p>
+              </div>
+              <div class="table__cell table__links-wrapper">
+                <ul class="table__links">
+                  <li class="table__link-wrapper">
+                    <a class="table__link" href="https://x.com/solana" target="_blank">Twitter</a>
+                  </li>
+                  <li class="table__link-wrapper">
+                    <a class="table__link" href="https://solana.com/" target="_blank">Website</a>
+                  </li>
+                  <li class="table__link-wrapper">
+                    <a class="table__link" href="pdf/solana.pdf" target="_blank">READ&nbsp;MORE</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            
             <div class="table__row" id="hivemapper">
               <div class="table__cell table__logo-wrapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
                 <img width="100" height="100" src="img/logo/hivemapper.jpg" alt="Hivemapper" class="table__logo">
               </div>
               <div class="table__cell table__name-wrapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
-                <h3 class="table__name">Hivemapper</h3>
+                <h3 class="table__name">$HONEY</h3>
               </div>
               <div class="table__cell table__description-wrapper" onclick="window.open('pdf/hivemapper.pdf', '_blank')">
                 <p class="table__description">
-                  Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
+                  Hivemapper is a distributed mapping network challenging traditional players like Google Maps. By rewarding drivers with $HONEY tokens, it crowdsources frequent street-level updates, delivering detailed mapping data for ride-hailing, logistics, and AI applications at a fraction of the cost.
                 </p>
               </div>
               <div class="table__cell table__links-wrapper">
@@ -279,7 +306,7 @@
                     <a class="table__link" href="https://docs.hivemapper.com/" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/hivemapper.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/hivemapper.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
@@ -291,11 +318,11 @@
                 <img width="100" height="100" src="img/logo/grass.jpg" alt="Grass" class="table__logo">
               </div>
               <div class="table__cell table__name-wrapper" onclick="window.open('pdf/grass.pdf', '_blank')">
-                <h3 class="table__name">Grass</h3>
+                <h3 class="table__name">$GRASS</h3>
               </div>
               <div class="table__cell table__description-wrapper" onclick="window.open('pdf/grass.pdf', '_blank')">
                 <p class="table__description">
-                  Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
+                  Grass Network is a decentralized data-gathering platform built for the growing demands of generative AI. By leveraging unused internet bandwidth from a global node network, it simplifies large-scale data aggregation, breaking down barriers for AI model training and development.
                 </p>
               </div>
               <div class="table__cell table__links-wrapper">
@@ -307,7 +334,7 @@
                     <a class="table__link" href="https://www.getgrass.io/" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/grass.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/grass.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
@@ -319,11 +346,11 @@
                 <img width="100" height="100" src="img/logo/io.jpg" alt="io.net" class="table__logo">
               </div>
               <div class="table__cell table__name-wrapper" onclick="window.open('pdf/io.pdf', '_blank')">
-                <h3 class="table__name">io.net</h3>
+                <h3 class="table__name">$ION</h3>
               </div>
               <div class="table__cell table__description-wrapper" onclick="window.open('pdf/io.pdf', '_blank')">
                 <p class="table__description">
-                  Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
+                  IO.net is a decentralized cloud leveraging GPUs globally to meet the rising demand for AI and ML. Offering frictionless, on-demand access to computational power, it delivers unmatched scalability, affordability, and flexibility for startups and enterprises.
                 </p>
               </div>
               <div class="table__cell table__links-wrapper">
@@ -335,7 +362,7 @@
                     <a class="table__link" href="https://io.net/" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/io.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/io.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
@@ -347,11 +374,11 @@
                 <img width="100" height="100" src="img/logo/sourceful.jpg" alt="Sourceful" class="table__logo">
               </div>
               <div class="table__cell table__name-wrapper" onclick="window.open('pdf/sourceful.pdf', '_blank')">
-                <h3 class="table__name">Sourceful</h3>
+                <h3 class="table__name">$ENERGY</h3>
               </div>
               <div class="table__cell table__description-wrapper" onclick="window.open('pdf/sourceful.pdf', '_blank')">
                 <p class="table__description">
-                  Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
+                  Sourceful Energy streamlines real-time coordination of Distributed Energy Resources (DERs) through its Energy Gateway IoT device and app. It enables reliable virtual power plants (VPPs), improves grid integration, and rewards users for contributing to energy stability.
                 </p>
               </div>
               <div class="table__cell table__links-wrapper">
@@ -363,7 +390,7 @@
                     <a class="table__link" href="https://sourceful.energy/" target="_blank">Website</a>
                   </li>
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="/pdf/sourceful.pdf" target="_blank">READ&nbsp;MORE</a>
+                    <a class="table__link" href="pdf/sourceful.pdf" target="_blank">READ&nbsp;MORE</a>
                   </li>
                 </ul>
               </div>
@@ -374,17 +401,17 @@
                 <img width="100" height="100" src="img/logo/fuse.jpg" alt="Fuse" class="table__logo">
               </div>
               <div class="table__cell table__name-wrapper" onclick="window.open('pdf/fuse.pdf', '_blank')">
-                <h3 class="table__name">Fuse</h3>
+                <h3 class="table__name">$FUSE</h3>
               </div>
               <div class="table__cell table__description-wrapper" onclick="window.open('pdf/fuse.pdf', '_blank')">
                 <p class="table__description">
-                  Solana is like the blockchain world’s sprinter—fast, flashy, and too busy for old-school decentralization debates. It’s the chain for those who want transactions done before their coffee cools. Think of it as the express lane at a very crowded crypto grocery store.
+                  Fuse is a customizable, EVM-compatible blockchain powering fast, low-cost payments and Web3 solutions. It supports mobile apps, loyalty programs, and borderless commerce, enabling seamless integration of digital finance for businesses and developers.
                 </p>
               </div>
               <div class="table__cell table__links-wrapper">
                 <ul class="table__links">
                   <li class="table__link-wrapper">
-                    <a class="table__link" href="https://x.com/Fuse_network" target="_blank">Twitter</a>
+                    <a class="table__link" href="https://x.com/fuseenergy" target="_blank">Twitter</a>
                   </li>
                   <li class="table__link-wrapper">
                     <a class="table__link" href="https://www.fuse.io/" target="_blank">Website</a>
